<resources>
    <string name="app_name">BackgroundTasksApplication</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="time">time</string>
    <string name="show_time">Show time</string>
    <string name="battery">battery</string>
    <string name="time_is">time is</string>
    <string name="to_check_time_click_below">To check time click below</string>
</resources>